--- a/Covid-19-Flutter-UI-master/pubspec.yaml
+++ b/Covid-19-Flutter-UI-master/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.17.4
+  cloud_firestore: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
